--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,15 +51,51 @@
   background-image: url('assets/bg.jpg');
   background-size: cover; /* Adjusts the background size */
   background-repeat: no-repeat; /* Prevents image repetition */
-  height: 100vh; /* Adjust the height as needed */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   color: #ffffff; /* Adjust text color for better contrast with the background */
 }
 
 .blury {
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px);
+}
+.blury2 {
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(15px);
+  background: rgba(15, 15, 15, 0.258);
+}
+
+
+.sidebar {
+  -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@-webkit-keyframes slide-top {
+  0% {
+    -webkit-transform: translateX(100px);
+    transform: translateX(100px);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-top {
+  0% {
+    -webkit-transform: translateX(100px);
+    transform: translateX(100px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateX(0);
+  }
+}
+
+.box-shadow {
+  box-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
+}
+
+.flip{
+  transform: scaleX(-1);
 }
